# agi

./: .gitignore  ARCHITECTURE.md  BUSINESS.md  DEPLOY.md  LICENSE  QUICKSTART.md  README.md  agi.py  browser_learner.py  eternal_agi.py  fast_learner.py  goal_agent.py  infinite_learner.py  life_agent.py  life_agent_v2.py  life_agent_v3.py  life_agent_v4.py  main.py  requirements.txt  run_spice.py  sja1110_frer_implementation.py  trend_learner.py  trinity.py
agents/: README.md  __init__.py  base.py  claude_adapter.py  gemini_adapter.py  lfm2_adapter.py  openai_adapter.py
browser/: browser_agent.py  computer_use_learner.py
config/: agents.yaml  business-demo.yaml  lfm2_config.yaml  sja1110-frer-analysis.yaml
core/: README.md  __init__.py  consensus.py  continual_learning.py  monitor.py  multimodal.py  orchestrator.py  router.py  web_crawler.py
docs/: agents.html  demo.html  docs.html  index.html  life-agent.html  liquid.html  strategies.html  trinity.html
examples/: basic_usage.sh  mock_test.sh  pipeline_mode.sh  revenue_generation.sh
life_agents/: life_agent_v3.py
mock_agents/: mock-claude-tech  mock-codex-implementation  mock-gemini-research
scripts/: agent_wrap.expect  auto_learner.py  nonint.sh  train_continual.py
spice/: __init__.py  challenger.py  corpus.py  reasoner.py  trainer.py
strategies/: __init__.py  debate.py  specialist.py  synthesis.py  vote.py
tests/: __init__.py  test_agents.py  test_consensus.py  test_router.py
trinity/: trinity.py
wasm-consensus/: Cargo.toml
wasm-consensus/src/: consensus.rs  lib.rs  similarity.rs
(+16 files in other folders)
