[package]
name = "trinity-consensus-wasm"
version = "0.1.0"
edition = "2021"
authors = ["AGI Trinity Team"]
description = "High-performance consensus engine for AGI Trinity using WebAssembly"
license = "MIT"
repository = "https://github.com/hwkim3330/agi"
keywords = ["wasm", "ai", "consensus", "nlp"]
categories = ["wasm", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }
unicode-segmentation = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
